style: #4 Modified UI ejs file

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -20,7 +20,7 @@
         <div class="admin-menu">
             <ul>
                 <li class="category category-1 category-active">
-                    <a class="router-link" href="/boiler-admin/posts">DashBoard</a>
+                    <a class="router-link" href="/boiler-admin/dashboards">DashBoard</a>
                 </li>
                 <li class="category category-2">
                     <a class="router-link" href="/boiler-admin/posts">Posts</a>
@@ -33,8 +33,9 @@
                 </li>
             </ul>
         </div>
-        <%= title%>
         <h1>Hello</h1>
+        <h4>This is <%-content%></h4>
+
     </div>
 </body>
 </html>
