--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,7 +4,6 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href='/css/admin.css'>
     <title>Admin</title>
 </head>
 <body>
@@ -22,6 +21,14 @@
                 <%for( let i = 0 ; i< category.length; i++) {%>
                     <li class="category">
                         <a class="router-link" href="<%=category[i].url%>"><%= category[i].name%></a>
+                        <ul class="sub-menu">
+<!--                            <h3>23423</h3>-->
+                            <%for (let j = 0; j< subParent.length; j++) { %>
+                                <li class="sub-category">
+                                    <a class="router-link" href="<%= subParent[j].url%>"><%= subParent[j].name%></a>
+                                </li>
+                            <%}%>
+                        </ul>
                     </li>
                 <% } %>
             </ul>
