--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,31 +4,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href='/css/admin.css'>
     <title>Admin</title>
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <div class="header-logo">
-                Logo here
+        <%- include('header'); -%>
+            <%- include('category');-%>
+            <div class="content">
+                <h1>Hello</h1>
+                <h4>This is <%-content%></h4>
             </div>
-            <div class="header-action">
-                Hi <%= username%>
-            </div>
-        </div>
-        <div class="admin-menu">
-            <ul>
-                <%for( let i = 0 ; i< category.length; i++) {%>
-                    <li class="category">
-                        <a class="router-link" href="<%=category[i].url%>"><%= category[i].name%></a>
-                    </li>
-                <% } %>
-            </ul>
-        </div>
-        <h1>Hello</h1>
-        <h4>This is <%-content%></h4>
-
     </div>
 </body>
 </html>
