refactor: Refactor name variables

--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,8 +1,8 @@
 <div class="admin-menu">
     <ul>
-        <%for( let i = 0 ; i< category.length; i++) {%>
+        <%for( let i = 0 ; i< categories.length; i++) {%>
         <li class="category">
-            <a class="router-link" href="<%=category[i].url%>"><%= category[i].name%></a>
+            <a class="router-link" href="<%=categories[i].url%>"><%= categories[i].name%></a>
         </li>
         <% } %>
     </ul>
