--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,13 +7,12 @@
     <title>Admin</title>
 </head>
 <body>
-    <div class="container">
-        <%- include('header'); -%>
-            <%- include('category');-%>
-            <div class="content">
-                <h1>Hello</h1>
-                <h4>This is <%-content%></h4>
-            </div>
+<div class="container">
+    <%- include('header'); -%>
+    <%- include('category'); -%>
+    <div class="content">
+        <%- content %>
     </div>
+</div>
 </body>
 </html>
