feat: output data for post type

--- a/core/views/type/posts/detail.ejs
+++ b/core/views/type/posts/detail.ejs
@@ -1,5 +1,5 @@
 <div class="container">
-    <form action="/boiler-admin/posts?post_type=post&action=add" method="post" class="detail-post">
+    <form action="?post_type=post&action=add" method="post" class="detail-post">
         <div class="edit-post-visual-editor">
             <div class="edit-page">
                 <input class="edit-title" type="text" placeholder="Add title" name="title" required>
