--- a/core/views/type/posts/index.ejs
+++ b/core/views/type/posts/index.ejs
@@ -1,6 +1,6 @@
-<h3>Post</h3>
+<h3><%= title %></h3>
 <% data.forEach(post => { %>
     <p><%= post.title %></p>
     <p><%= post.visibility %></p>
 <% }) %>
-<a href="/boiler-admin/posts?post_type=post&action=add">Add new</a>
+<a href="?post_type=post&action=add">Add new</a>
