--- a/core/views/type/posts/detail.ejs
+++ b/core/views/type/posts/detail.ejs
@@ -1,67 +1,45 @@
+<%
+// boolean for checking edit or add new post
+const isEditPost = actionType === 'edit';
+
+// validate selected value on select
+const isSelectedValue = (name, value) => {
+    if(!isEditPost) return null
+    return data[name] === value ? 'selected' : null
+}
+
+// get value from data
+const getValueFromData = (name) => {
+    if(!isEditPost) return ''
+    return data[name]
+}
+%>
+
 <div class="container">
-    <form action="?post_type=post&action=add" method="post" class="detail-post">
-        <div class="edit-post-visual-editor">
-            <div class="edit-page">
-                <input class="edit-title" type="text" placeholder="Add title" name="title" required>
-            </div>
-            <div class="paragraph">
+    <form action="?post_type=post&action=<%= actionType %><%= (isEditPost && '&id=' + data._id) %>" method="post"
+          class="detail-post">
 
-            </div>
+        <div>
+            <label for="title">Add title</label>
+            <input type="text" placeholder="Add title" id="title" name="title" required
+                   value="<%= getValueFromData('title') %>">
         </div>
-        <div class="component-panel">
-            <div class="component-panel-body">
-                <div class="component-panel-title">Publish</div>
-                <div class="component-panel-button">
-                    <div class="btn-save-draft">
-                        <button>Save Draft</button>
-                    </div>
-                    <div class="btn-preview">
-                        <button>Preview</button>
-                    </div>
-                </div>
-                <div class="component-panel-row edit-post-post-status">
-                    <span>Status</span>
-                    <div class="component-dropdown">
-                        <button type="button" aria-expanded="false" aria-label="Select Status: Draft">Edit</button>
-                        <input type="text" >
-                    </div>
-                </div>
-                <div class="component-panel-row edit-post-post-visibility">
-                    <span>Visibility</span>
-                    <div class="component-dropdown">
-                        <button type="button" aria-expanded="false" aria-label="Select Visibility: Public">Edit</button>
-                        <select name="visibility">
-                            <option value="public" name="public">Public</option>
-                            <option value="private" name="private">Private</option>
-                            <option value="Password protect" name="password-protect">Password Protect</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="component-panel-row edit-post-post-schedule">
-                    <span>Public</span>
-                    <div class="component-dropdown">
-                        <button type="button" aria-expanded="false" aria-label="Select Schedule">Edit</button>
-                        <select name="schedule">
-                            <option value="immediately" name="immediately">Immediately</option>
-                            <option>Another</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="component-panel-row edit-post-post-template"></div>
-                <div class="component-panel-row edit-post-post-url"></div>
-                <div class="component-panel-row edit-post-publish-button">
-                    <button>Move to trash</button>
-                    <button type="submit">Publish</button>
-                </div>
+
+        <% if (isEditPost) { %>
+            <div>
+                <label for="edit-url">Edit URL</label>
+                <input type="text" placeholder="Edit URL" id="edit-url" name="url"
+                       value="<%= getValueFromData('url') %>">
             </div>
-            <br>
-            <br>
-            <br>
-            <div class="component-panel-body">
-                <div class="component-panel-title">Page attributes</div>
-            </div>
+        <% } %>
+
+        <div>
+            <label for="visibility">Visibility</label>
+            <select name="visibility" id="visibility">
+                <option <%= isSelectedValue('visibility', 'public') %> value="public" name="public">Public</option>
+                <option <%= isSelectedValue('visibility', 'private') %> value="private" name="private">Private</option>
+            </select>
         </div>
+        <button type="submit">Publish</button>
     </form>
-
-
 </div>
