--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,8 @@
-<div class="header">
-    <div class="header-logo">
-        Logo here
+<div class="admin-panel txt_color_white">
+    <div class="admin-panel__logo">
+        <p>Logo</p>
     </div>
-    <div class="header-action">
-        Hi
+    <div class="admin-panel__account">
+        <p>Halo, Vu</p>
     </div>
 </div>
