style: admin (active category)

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -27,7 +27,9 @@
         <%- include('category'); -%>
     </aside>
     <div class="main-content">
-        <%- content %>
+        <div class="main-content__inner">
+            <%- content %>
+        </div>
     </div>
 </div>
 
