--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,17 @@
 <div class="admin-panel txt_color_white">
-    <div class="admin-panel__logo">
-        <p>Logo</p>
+    <div class="admin__panel--left" data-toggle="sidebar">
+        <button class="admin-panel__menu">
+            <span class="admin-panel__menu-bar"></span>
+            <span class="admin-panel__menu-bar"></span>
+            <span class="admin-panel__menu-bar"></span>
+        </button>
+        <div class="admin-panel__logo">
+            <p>Logo</p>
+        </div>
     </div>
-    <div class="admin-panel__account">
-        <p>Halo, Vu</p>
+    <div class="admin__panel--right">
+        <div class="admin-panel__account">
+            <p>Halo, Vu</p>
+        </div>
     </div>
 </div>
