--- a/core/views/type/posts/index.ejs
+++ b/core/views/type/posts/index.ejs
@@ -23,7 +23,8 @@
                         <a href="?post_type=<%= contentType %>&action=edit&id=<%= post._id %>"
                            class="posts__item--link">Edit</a>
                         <a href="/<%= type %>/<%= post.url %>" target="_blank" class="posts__item--link">View</a>
-                        <a href="#" class="posts__item--link--trash">Trash</a>
+                        <a href="#" target="_blank" class="posts__item--link">Quick Edit</a>
+                        <a href="#" class="posts__item--link trash">Trash</a>
                     </div>
                 </div>
 
@@ -31,7 +32,10 @@
                 <div class="posts__item--author"
                      data-column="author"><%= ['Vũ', 'jen', 'vupham', 'Quang Vu Pham'][Math.round(Math.random() * 3)] %></div>
                 <div class="posts__item--categories" data-column="categories">Categories</div>
-                <div class="posts__item--date" data-column="date">Date</div>
+                <div class="posts__item--date" data-column="date">
+                    <div class="posts__item--status">Published</div>
+                    <time>29/09/2002 at 14:45</time>
+                </div>
             </div>
         <% }) %>
     </div>
