--- a/public/posts_type.css
+++ b/public/posts_type.css
@@ -10,9 +10,9 @@
 /* list */
 .posts-list {
     --title-width:calc(100% - var(--author-width) - var(--categories-width) - var(--date-width));
-    --author-width:300px;
-    --categories-width:200px;
-    --date-width:140px;
+    --author-width:160px;
+    --categories-width:160px;
+    --date-width:180px;
 }
 
 /* column */
@@ -20,16 +20,40 @@
 .posts-list__item {display:flex; align-items:center;}
 
 .posts-list [data-column-wrapper] {min-height:50px;}
-.posts-list [data-column] {padding:10px 15px;}
+.posts-list [data-column] {padding:15px; font-size:14px;}
+
+/* each columns */
 .posts-list [data-column="title"] {width:var(--title-width);}
 .posts-list [data-column="author"] {width:var(--author-width);}
 .posts-list [data-column="categories"] {width:var(--categories-width);}
 .posts-list [data-column="date"] {width:var(--date-width);}
 
 /* heading */
-.posts-list .posts-list__heading {background-color:var(--color-secondary); color:var(--color-white)}
+.posts-list .posts-list__heading {background-color:var(--color-secondary); color:var(--color-white);}
 
 /* item */
-.posts-list .posts-list__item {align-items:flex-start;}
+.posts-list .posts-list__item {align-items:flex-start; background-color:rgba(222, 226, 230, 0.58)}
 .posts-list .posts-list__item:nth-child(odd) {background-color:#f8f9fa;}
 
+/* link */
+.posts__item--link {text-decoration:none;}
+.posts__item--title > .posts__item--link {font-weight:500;}
+.posts__item--link.trash {--permalink-color:var(--color-error);}
+
+/* utils */
+.posts__item--utils {padding-top:4px; font-size:13px; opacity:0; transition:opacity 0.3s ease;}
+.posts__item--utils .posts__item--link {position:relative}
+.posts__item--utils .posts__item--link:not(:last-child) {padding-right:10px; margin-right:6px; display:inline-block;}
+.posts__item--utils .posts__item--link:not(:last-child):after {
+    content:""; position:absolute; top:50%; right:0; transform:translate(0, -50%);
+    width:1px; height:80%; background-color:var(--color-gray);
+}
+
+/* hover */
+.posts-list__item:hover .posts__item--utils,
+.posts-list__item:focus .posts__item--utils {opacity:1;}
+
+/* responsive */
+@media only screen and (max-width:1024px) {
+
+}
