--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/admin.css">
+    <link rel="stylesheet" href="/header.css">
     <link rel="stylesheet" href="/sidebar.css">
     <link rel="stylesheet" href="/posts_type.css">
     <script src="/theme.min.js" defer></script>
