--- a/public/admin.css
+++ b/public/admin.css
@@ -99,3 +99,44 @@ button:focus-visible {
     background-color:var(--bg-hover);
     color:var(--color-hover);
 }
+
+
+/* custom table */
+@media only screen and (min-width:767px) {
+    /* column */
+    [data-custom-table] [data-column-wrapper] {display:flex; align-items:center;}
+
+    [data-custom-table] [data-column-wrapper] {min-height:50px;}
+    [data-custom-table] [data-column] {padding:15px; font-size:14px;}
+
+    /* each columns */
+    [data-custom-table] [data-column] {width:25%;}
+
+    /* heading */
+    [data-custom-table] [data-column-wrapper="heading"] {background-color:var(--color-secondary); color:var(--color-white);}
+
+    /* item */
+    [data-custom-table] [data-column-wrapper="item"] {align-items:flex-start; background-color:rgba(222, 226, 230, 0.58)}
+    [data-custom-table] [data-column-wrapper="item"]:nth-child(odd) {background-color:#f8f9fa;}
+}
+@media only screen and (max-width:768px) {
+    /* heading */
+    [data-custom-table] [data-column-wrapper="heading"] {display:none;}
+
+    /* column */
+    [data-custom-table] [data-column-wrapper="item"] [data-column] {font-size:14px;}
+    [data-custom-table] [data-column-wrapper="item"] [data-column]:not(:last-child),
+    [data-custom-table] [data-column-wrapper="item"] [data-column] [data-title]:not(:last-child) {margin-bottom:5px;}
+
+    /* title with data attribute */
+    [data-custom-table] [data-column-wrapper="item"] [data-column].not-show-title [data-title]:before,
+    [data-custom-table] [data-column-wrapper="item"] [data-column]:not(.not-show-title):before {
+        content:attr(data-column) ": ";
+        font-weight:400; color:var(--color-secondary);
+    }
+    [data-custom-table] [data-column-wrapper="item"] [data-column].not-show-title [data-title]:before {content:attr(data-title) ": ";}
+
+    /* item */
+    [data-custom-table] [data-column-wrapper="item"] {padding:20px; border-radius:3px; border:1px solid var(--color-secondary);}
+    [data-custom-table] [data-column-wrapper="item"]:not(:last-child) {margin-bottom:20px;}
+}
