--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="/admin.css">
     <link rel="stylesheet" href="/header.css">
     <link rel="stylesheet" href="/sidebar.css">
-    <link rel="stylesheet" href="/posts_type.css">
+    <link rel="stylesheet" href="/posts-type.css">
+    <link rel="stylesheet" href="/posts-type-detail.css">
     <script src="/theme.min.js" defer></script>
 </head>
 <body>
@@ -32,7 +33,7 @@
     </aside>
     <div class="main-content">
         <div class="main-content__inner">
-            <%- content %>
+            <%- content; %>
         </div>
     </div>
 </div>
