--- a/public/admin.css
+++ b/public/admin.css
@@ -100,6 +100,18 @@ button:focus-visible {
     color:var(--color-hover);
 }
 
+/* text */
+.txt_14px {font-size:14px;}
+
+/* input */
+input {
+    min-height:45px; padding:5px 10px; border:1px solid var(--color-secondary); border-radius:4px;
+    font-family:inherit; font-size:16px; width:auto;
+}
+
+/**/
+.hidden {display:none;}
+
 
 /* custom table */
 @media only screen and (min-width:767px) {
