feat: introduce component feature

--- a/core/views/core-component-type/text.ejs
+++ b/core/views/core-component-type/text.ejs
@@ -1,3 +1,6 @@
-<div contenteditable="" class="<%= classesName ;%>">
-    Please edit the content here
+<div class="<%= classesName; %>">
+    <div contenteditable="">
+        Please edit the content here
+    </div>
+    <div class="description"> <%= description %></div>
 </div>
