--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/sidebar.css">
     <link rel="stylesheet" href="/posts-type.css">
     <link rel="stylesheet" href="/posts-type-detail.css">
+    <link rel="stylesheet" href="/component-panel.css">
     <script src="/theme.min.js" defer></script>
 </head>
 <body>
