--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -45,9 +45,31 @@ const getValueFromData = (name) => {
                     <% } %>
                 </div>
 
-                <div class="posts__detail-content">
+                <div class="posts__detail-content" data-content>
                     <div class="posts__detail-inner">
-                        <button type="button">Add more</button>
+
+                        <div class="row" data-component="row" style="text-align:center">
+
+                            <div data-component="text-editor">
+                                <div data-component-title>Text editor</div>
+                                <div data-component-description>WYSIWYG Text block</div>
+                            </div>
+
+                            <div data-component="text-editor">
+                                <div data-component-title>Text editor</div>
+                                <div data-component-description>WYSIWYG Text block</div>
+                            </div>
+
+                            <button class="posts-detail-content__add-component button-style" data-component-add
+                                    type="button" data-toggle="components">Add more
+                            </button>
+                        </div>
+
+                        <div class="row" data-component="row" style="text-align:center">
+                            <button class="posts-detail-content__add-component button-style" data-component-add
+                                    type="button" data-toggle="components">Add more
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -55,7 +77,7 @@ const getValueFromData = (name) => {
             <div class="posts-detail--right">
                 <div class="posts-detail__visibility">
                     <label for="visibility">Visibility</label>
-                    <select name="visibility" id="visibility" data-easy-select>
+                    <select name="visibility" id="visibility">
                         <option <%= isSelectedValue('visibility', 'public') %> value="public" name="public">Public
                         </option>
                         <option <%= isSelectedValue('visibility', 'private') %> value="private" name="private">Private
@@ -69,14 +91,24 @@ const getValueFromData = (name) => {
     </form>
 </div>
 
-<div class="posts-detail__components" data-components>
-    <% components.forEach(c => { %>
+<div class="posts-detail__components" data-popup data-components>
+    <div data-popup-overlay data-toggle="components"></div>
+    <div class="component-popup__inner" data-popup-inner>
+        <% components.forEach(c => { %>
+            <button class="posts-detail__component-item" data-component="<%= c.name; %>"
+                    data-toggle="components component-panel">
+                <div data-component-title><%= c.title; %></div>
+                <div data-component-description><%= c.description; %></div>
+            </button>
+        <% }); %>
+    </div>
+</div>
 
-        <button class="posts-detail__component-item" data-component="<%= c.name; %>">
-            <div data-component-title><%= c.title ;%></div>
-            <div data-component-description><%= c.description; %></div>
-        </button>
-
-    <% }); %>
-    <% console.log(components); %>
+<div class="component-popup" data-popup>
+    <div data-popup-overlay data-toggle="component-panel"></div>
+    <div class="component-popup__inner" data-popup-inner="">
+        <div class="component-popup__content"></div>
+        <button class="component-popup__save">Save</button>
+        <button data-toggle="component-panel">Cancel</button>
+    </div>
 </div>
