--- a/public/component-panel.css
+++ b/public/component-panel.css
@@ -1,31 +1,37 @@
-[data-components] {
-    padding:20px;
-    border:1px solid var(--color-secondary);
-    border-radius:4px;
-
-    display:grid;
-    grid-template-columns:repeat(6, 1fr);
-    gap:20px;
+.posts-detail__components .component-popup__inner {
+    display:grid; grid-template-columns:repeat(5, 1fr); grid-template-rows:max-content; gap:20px;
 }
 
-[data-component] {
-    border:1px solid transparent;
-    padding:10px;
-    border-radius:4px;
-
-    text-align:left;
-    transition:all 0.3s ease;
+[data-components] [data-component] {
+    border:1px solid transparent; padding:10px; border-radius:4px;
+    text-align:left; transition:all 0.3s ease;
 }
 
 /* hover */
-[data-component]:hover,
-[data-component]:focus {border-color:var(--color-secondary);}
+[data-components] [data-component]:hover,
+[data-components] [data-component]:focus {border-color:var(--color-secondary);}
 
-[data-component-title] {
+[data-components] [data-component-title] {
     font-weight:700;
     font-size:14px;
     color:var(--color-secondary);
 
     margin-bottom:5px;
 }
-[data-component-description] {font-size:13px; color:rgba(33, 37, 41, 0.75);}
+[data-components] [data-component-description] {font-size:13px; color:rgba(33, 37, 41, 0.75);}
+
+/* popup */
+[data-popup] {
+    position:fixed; top:0; left:0; right:0; bottom:0; background-color:rgba(0, 0, 0, 0.1);
+    transition-property:opacity, visibility; transition-duration:0.3s; transition-timing-function:ease;
+    backdrop-filter:blur(5px);
+}
+[data-popup-overlay] {position:fixed; top:0; left:0; right:0; bottom:0;}
+[data-popup-inner] {
+    width:100%; max-width:1180px; height:500px;
+    background-color:#fff; padding:20px; border-radius:10px; box-shadow:3px 4px 12px rgba(0, 0, 0, 0.05);
+    position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
+}
+
+html:not(.component-panel-is-open) .component-popup[data-popup],
+html:not(.components-is-open) .posts-detail__components[data-popup] {opacity:0; visibility:hidden}
